framework-config/keycloak-config/default-keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: default
  labels:
    app: keycloak
    custom: mylabel2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: keycloak/keycloak:22.0.5
        args: ["start"]
        ports:
        - name: http
          containerPort: 8080
