framework-config/keycloak-config/istio-system-keycloak-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak
  namespace: istio-system
spec:
  hosts:
  - <your_keycloak_hostname>
  gateways:
  - login-demo-gateway
  http:
  - name: keycloak-route
    match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: keycloak.default.svc.cluster.local
        port:
          number: 8080
